--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.2)
 project(frenet)
 
-#set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_C_FLAGS_DEBUG "-DNDEBUG")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -march=native -o3 -pthread")
 include_directories(/usr/include/eigen3)
 include_directories(include)
