--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.2)
 project(frenet)
 
 #set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -march=native -o3 -pthread")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -march=native -pthread")
 include_directories(/usr/include/eigen3)
 include_directories(include)
 
@@ -10,7 +10,7 @@ find_package(OpenCV 3.3.1 REQUIRED)
 set(OpenCV_LIBS opencv_core opencv_imgproc opencv_highgui)
 include_directories(${OpenCV_INCLUDE_DIRS})
 
-find_package(PythonLibs 2.7)
+find_package(PythonLibs 3.8)
 message(${PYTHON_INCLUDE_DIRS})
 
 aux_source_directory("./src" SRC_LIST)
